--- a/posts/2020-03-14-realm.md
+++ b/posts/2020-03-14-realm.md
@@ -8,7 +8,7 @@ categories:
 - review
 date: '2020-03-14'
 description: A better Q&A system based on knowledge retrieval
-image: images/realm/training.png
+image: realm/training.png
 layout: post
 title: 'REALM: Retrieval-Augmented Language MOdel Pre-Training'
 toc: true
@@ -32,7 +32,7 @@ Introduction
     backprop through retreiver which considers lots of docs.
 
     ![Training process for
-    REALM[]{data-label="fig:training"}]({{site.baseurl}}/images/realm/training.png)
+    REALM[]{data-label="fig:training"}](realm/training.png)
 
 -   Key point: Train retriever using a performance-based signal from
     unsupervised text.
@@ -158,7 +158,7 @@ Training
     -   *Secondary index builder*: Embeds and indexes the docs
 
         ![Async MIPS
-        implementation[]{data-label="fig:async_mips"}]({{site.baseurl}}/images/realm/async_mips.png)
+        implementation[]{data-label="fig:async_mips"}](realm/async_mips.png)
 
     -   Async refresh used only for pre-training
 
