--- a/posts/2020-08-31-bison.md
+++ b/posts/2020-08-31-bison.md
@@ -34,7 +34,7 @@ toc: true
 
 # Proposed method
 ## Overview of BISON
-![BISON Architecture]({{site.baseurl}}/images/bison/bison_architecture.png)
+![BISON Architecture](bison/bison_architecture.png)
 - The framework has 4 important parts: 
   - **Word level BM25**: In this, we prepend the _CLS_ token to the query and use combined fields representation for the documents.
   - **Token level representation**: As is the norm, we will use the token, position and segment embedding
@@ -46,7 +46,7 @@ toc: true
 - To the above, we will add the importance of tokens via BM25. We will introduce w_i and multiply with above attention to get new attention score i.e Weighted Self Attention
     $$ A_{ij}^w = w_j\frac{q_i.k_j^T}{\sqrt{d}} $$
 
-![Weighted Self attention]({{site.baseurl}}/images/bison/weighted_self_attention.png)
+![Weighted Self attention](bison/weighted_self_attention.png)
 - Mathematically, it is represented as:
 
 $$WeightedSelfAttention(Q,K,W,V) = softmax(W (.) \frac{QK^T}{\sqrt{d}}V$$
@@ -144,7 +144,7 @@ $$
   - TF-IDF and BM25: To present performance for standard information retrieval 
   - USE and C-DSSM: To represent sentence embeddings for information retrieval
   - BERT and XLNET: To represent models from the pre-training era.
-![BISON Performance]({{site.baseurl}}/images/bison/bison_performance.png)
+![BISON Performance](bison/bison_performance.png)
 
 ## Intrinsic evaluation
 - Selected 1400 representative queries and 7 million query document pairs from Bing's search log
@@ -160,7 +160,7 @@ $$
   - BISON$_{tw}$: Use token level weight generation. 
   - BISON$_{us}$: Exclude combined fields representation and use a union segment i.e concatenate all fields as one segment.
   - BISON$_{idf}$: Use IDF as an alternative for BM25
-![BISON Abalation]({{site.baseurl}}/images/bison/bison_abalation.png)
+![BISON Abalation](bison/bison_abalation.png)
 
 # Conclusion
 
