--- a/posts/2020-04-23-tag-lm.md
+++ b/posts/2020-04-23-tag-lm.md
@@ -87,7 +87,7 @@ Baseline
 
 -   Use Viterbi algorithm to find most likely sequence
 
-    ![Overview of architecture[]{data-label="fig:overview"}]({{site.baseurl}}/images/taglm/overview.png)
+    ![Overview of architecture[]{data-label="fig:overview"}](taglm/overview.png)
 
 
 -   LM embedding will be created by concatenating forward and backward
