Fix formatting errors

--- a/posts/2020-08-31-bison.md
+++ b/posts/2020-08-31-bison.md
@@ -34,7 +34,9 @@ toc: true
 
 # Proposed method
 ## Overview of BISON
+
 ![BISON Architecture](bison/bison_architecture.png)
+
 - The framework has 4 important parts: 
   - **Word level BM25**: In this, we prepend the _CLS_ token to the query and use combined fields representation for the documents.
   - **Token level representation**: As is the norm, we will use the token, position and segment embedding
@@ -42,11 +44,13 @@ toc: true
   - **Scoring**: The documents are scored using the cosine similarity metric.
 
 ## BISON Encoder: Weighted Self Attention
+
 - As we know from the original "Attention" paper, attention is computed using the query, key, and value matrices. 
 - To the above, we will add the importance of tokens via BM25. We will introduce w_i and multiply with above attention to get new attention score i.e Weighted Self Attention
     $$ A_{ij}^w = w_j\frac{q_i.k_j^T}{\sqrt{d}} $$
 
-![Weighted Self attention](bison/weighted_self_attention.png)
+![Weighted Self Attention](bison/weighted_self_attention.png)
+
 - Mathematically, it is represented as:
 
 $$WeightedSelfAttention(Q,K,W,V) = softmax(W (.) \frac{QK^T}{\sqrt{d}}V$$
@@ -62,10 +66,12 @@ $$CWSA_{out}=LayerNorm(CWSA + X)$$
 $$BISONEncoder = LayerNorm(CWSA_{out} + FeedForward(CWSA_{out}))$$
 
 ## BM25 Weight generation
+
 - Use BM25 for weight scores in query and BM25F for weight scores in multi-field documents
 - BM25F, a variation of BM25, is for documents with different fields, each having different importance in terms of relevance saturation and length normalization. Find additional details in the file [here](https://web.stanford.edu/class/cs276/handouts/lecture12-bm25etc.pdf).
 
 ### Inherent Query BM25
+
 - For a given query, BM25 is calculated within the query.
   - $l_q$: query length 
   - $avl_q$: query average length along collection
@@ -75,6 +81,7 @@ w_i^{BM25} = idf_i \frac{tf_i}{tf_i + k_1(1-b+b \frac{l_q}{avl_q})}
 $$
 
 ### Inherent Document BM25F
+
 - BM25F is implemented by assigning different degrees of importance to the different zones in a document such as title, header, footer, filetype, text, etc. For a  $word_j$ in a document field $c$, it's frequency $f_j^c$ is defined as:
 
 $$
