--- a/posts/2025-06-02-mojo-gpu-puzzles.qmd
+++ b/posts/2025-06-02-mojo-gpu-puzzles.qmd
@@ -44,7 +44,7 @@ Modular has since announced Max, their AI inference platform, built on Mojo. The
 
 Not sure what to put in here. Skipping for now.
 
-![](mojo_gpu_puzzles/gpu_memory.png) 
+![](mojo_gpu_puzzles/gpu_memory.png)
 ![](mojo_gpu_puzzles/program_flow.png)
 
 ## Infrastructure
@@ -446,6 +446,14 @@ As shown [above](#gpu-memory), SRAM is orders of magnitude faster than DRAM. Acc
 
 Although this input is too small to reveal a noticeable speedup, the advantage of shared memory becomes substantial as array sizes increase.
 
+Now, because our operations depend on all records being available in shared memory, we need to wait for all threads in a block to write data to the shared memory before we can access it. Failure to do this can lead to deadlocks or undefined behaviour. Hence, we need **synchronisation**!
+
+Mojo has support for all the common [synchronisation primitives](https://docs.modular.com/mojo/stdlib/gpu/sync/#functions), similar to [CUDA primitives](https://nvidia.github.io/cccl/libcudacxx/extended_api/synchronization_primitives.html). For this puzzle, we need to use the `barrier` synchronisation, which is the same as `_syncThreads()` in CUDA:  Ensure all threads within a thread block reach the barrier before any can proceed.
+
+![](mojo_gpu_puzzles/p08.png){fig-align="center"}
+
+#### Raw memory
+
 <details open>
 <summary> **Solution** </summary>
 
@@ -479,6 +487,58 @@ fn add_10_shared(
 
     if global_i < size:
         out[global_i] = shared[local_i] + 10.0
+```
+
+```bash
+pixi run p08
+# out: HostBuffer([11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0])
+# expected: HostBuffer([11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0])
+```
+
+</details>
+
+#### LayoutTensor
+
+Key difference here is to use [LayoutTensorBuild instead of stack_allocation](https://builds.modular.com/puzzles/puzzle_08/layout_tensor.html#key-differences-from-raw-approach) to allocate shared memory. 
+
+<details open>
+<summary> **Solution** </summary>
+
+```{.mojo filename=p08_layout_tensor.mojo}
+alias TPB = 4
+alias SIZE = 8
+alias BLOCKS_PER_GRID = (2, 1)
+alias THREADS_PER_BLOCK = (TPB, 1)
+alias dtype = DType.float32
+alias layout = Layout.row_major(SIZE)
+
+
+fn add_10_shared_layout_tensor[
+    layout: Layout
+](
+    out: LayoutTensor[mut=True, dtype, layout],
+    a: LayoutTensor[mut=True, dtype, layout],
+    size: Int,
+):
+    # Allocate shared memory using tensor builder
+    shared = tb[dtype]().row_major[TPB]().shared().alloc()
+
+    global_i = block_dim.x * block_idx.x + thread_idx.x
+    local_i = thread_idx.x
+
+    if global_i < size:
+        shared[local_i] = a[global_i]
+
+    barrier()
+
+    if global_i < size:
+        out[global_i] = shared[local_i] + 10.0
+```
+
+```bash
+pixi run p08_layout_tensor
+# out: HostBuffer([11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0])
+# expected: HostBuffer([11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0])
 ```
 
 </details>
