--- a/posts/citations/mojo_citations.bib
+++ b/posts/citations/mojo_citations.bib
@@ -53,3 +53,10 @@
   url = {https://youtu.be/zUwyO2PZisw?si=QLdX_cAXDBcJH4mu},
   note = {Triton Clone in Mojo}
 }
+@misc{wikipediadotproduct,
+  author = {Wikipedia},
+  title = {Dot product},
+  year = {2024},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Dot_product}},
+}
+
